tests/baselines/reference/parserEnum4.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts(4,9): error TS1132: Enum member expected.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts (1 errors) ====
    
    
        export enum SignatureFlags {
            ,
            ~
!!! error TS1132: Enum member expected.
        }